--- a/www/templates/login2.html
+++ b/www/templates/login2.html
@@ -13,6 +13,7 @@
                 </label>
             </ion-list>
             <button type="submit" href="#/page7/home" class="button button-calm button-block ">Log in</button>
+            <button class="button button-outline button-calm button-block"> Forgot Password? </button>
             <a href="#/signup" class="button button-positive button-clear button-block ">Or create an account</a>
         </form>
     </ion-content>
