--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,6 +1,6 @@
 <ion-view title="Signup">
     <ion-content padding="'true'" scroll="false" class="has-header">
-       <form class="list" ng-submit="getSignUp()">
+       <form class="list" ng-submit="getSignUp()" name="SignUpForm">
             <label class="item item-input">
                 <input type="text" placeholder="USERNAME (eg: letters123)" ng-model="signup.username">
             </label>
@@ -13,8 +13,10 @@
                 </label>
             </ion-list>
             <label class="item item-input">
-                <input type="password" placeholder="RE-TYPE PASSWORD" ng-model="signup.retype">
+                <input type="password" placeholder="RE-TYPE PASSWORD" 
+                ng-model="signup.retype" match="signup.password" name="ConfirmField">
             </label>
+            <div ng-show="SignUpForm.ConfirmField.$error.match">Password does not match</div>
             <div class="spacer" style="width: 300px; height: 53px;"></div>
             <button class="button button-balanced button-block ">Sign up</button>
         </form>
