--- a/www/templates/newStatus.html
+++ b/www/templates/newStatus.html
@@ -3,16 +3,41 @@
         <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: auto; background-color: rgb(255, 255, 255);">
             <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
         </div>
-        <form class="list">
+        <form class="list" ng-submit="getNewStatus()">
+
             <label class="item item-input">
-                <input type="text" placeholder="Pet's Name">
+                <div class="col col-67"> 
+                    <input type="text" placeholder="Pet's Name" ng-model="status.petname">
+                 </div>
+
+                <div class="col">
+                    <input type="text" class="" placeholder="Age" ng-model="status.age">
+                </div>
             </label>
+
             <label class="item item-input">
-                <input type="text" placeholder="Age">
+                <input type="text" placeholder="Breed" ng-model="status.breed"> 
             </label>
+
+            <div class="list">
+
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Gender
+                </div>
+                <select ng-model="status.gender">
+                    <option selected>Male</option>
+                    <option>Female</option>
+                </select>
+            </label>
+            </div>
+
             <label class="item item-input">
-                <input type="text" placeholder="Breed">
+                <input type="text" placeholder="Location" ng-model="status.location">
             </label>
+
+            <button class="button button-outline button-royal button-block" type="submit">POST!</button>
+
         </form>
     </ion-content>
 </ion-view>
