--- a/www/templates/notification.html
+++ b/www/templates/notification.html
@@ -1,4 +1,9 @@
 <ion-view title="Notification">
+    <ion-nav-buttons side="left">
+      <button class="button" ng-click="openPopover($event)">
+        <i class="icon ion-ios-more"></i>
+      </button>
+    </ion-nav-buttons>
     <ion-content padding="'true'" class="has-header">
         <ion-list>
             <ion-item menu-close="">Item 1</ion-item>
