--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,4 +1,9 @@
 <ion-view title="Search">
+    <ion-nav-buttons side="left">
+      <button class="button" ng-click="openPopover($event)">
+        <i class="icon ion-ios-more"></i>
+      </button>
+    </ion-nav-buttons>
     <ion-content padding="'true'" class="has-header">
         <form class="list">
             <label class="item item-input">
@@ -8,3 +13,18 @@
         </form>
     </ion-content>
 </ion-view>
+
+<script id="popover.html" type="text/ng-template">
+  <ion-popover-view style="height:120px">
+    <ion-header-bar>
+      <h1 class="title">Menu</h1>
+    </ion-header-bar>
+    <ion-content>
+    <ul class="list">
+        <li class="item">
+            <a ng-click="logout()" style="color:red"> Log out </a>
+        </li>
+    </ul>
+    </ion-content>
+  </ion-popover-view>
+</script>
