--- a/www/templates/newStatus.html
+++ b/www/templates/newStatus.html
@@ -11,7 +11,7 @@
                  </div>
 
                 <div class="col">
-                    <input type="text" class="" placeholder="Age" ng-model="status.age">
+                    <input type="text" placeholder="Age" ng-model="status.age">
                 </div>
             </label>
 
