able to save photo (camera) and display it on the newsfeed

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="item item-image">
-        <img src="">
+        <img src={{x.image}}>
       </div>
 
       <a class="item item-icon-left assertive" href="#">
