--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -6,11 +6,8 @@
         <ion-tab title="Search" icon="ion-search" href="#/page7/search">
             <ion-nav-view name="tab11"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="New Status" icon="ion-heart" href="#/page7/page10">
+        <ion-tab title="New Status" icon="ion-heart" href="#/page7/newStatus">
             <ion-nav-view name="tab12"></ion-nav-view>
-        </ion-tab>
-        <ion-tab title="Notification" icon="ion-android-notifications" href="#/page7/notification">
-            <ion-nav-view name="tab13"></ion-nav-view>
         </ion-tab>
         <ion-tab title="Profile" icon="ion-person" href="#/page7/profile">
             <ion-nav-view name="tab14"></ion-nav-view>
