--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -20,7 +20,7 @@
           </div>
 
           <div class="item item-image">
-            <img src="">
+            <img src={{x.image}}>
           </div>
 
           <a class="item item-icon-left assertive" href="#">
