done image picker func. able to take photo or choose photo

--- a/www/templates/newStatus.html
+++ b/www/templates/newStatus.html
@@ -5,7 +5,7 @@
             
             <div class="button-bar">
                 <a class="button button-outline button-royal ion-camera" ng-click="useCamera()"></a>
-                <a class="button button-outline button-royal ion-images"></a>
+                <a class="button button-outline button-royal ion-images" ng-click="pickPix()"></a>
             </div>
            
 
