--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,8 @@
 <ion-view title="Home">
     <ion-content padding="'true'" class="has-header">
-<!--     {{status}} -->
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="getStatus()">
+        </ion-refresher>
+    
     <div class="list card" ng-repeat="x in status">
 
       <div class="item item-avatar">
@@ -18,6 +20,6 @@
         {{x.location}}
       </a>
 
-    </div>
+        </div>
     </ion-content>
 </ion-view>
