--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -1,5 +1,5 @@
 <ion-view title="Tabs Controller">
-    <ion-tabs class="tabs-stable tabs-icon-top">
+    <ion-tabs class="tabs-stable tabs-icon-top tabs-background-royal tabs-color-light">
         <ion-tab title="Home" icon="ion-home" href="#/page7/home">
             <ion-nav-view name="tab10"></ion-nav-view>
         </ion-tab>
