--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -17,7 +17,7 @@
 
       <a class="item item-icon-left assertive" href="#">
         <i class="icon ion-ios-location"></i>
-        {{x.location}}
+        {{x.city}}, {{x.state}}
       </a>
 
         </div>
