--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -8,7 +8,25 @@
         <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: auto; background-color: rgb(255, 255, 255);">
             <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
         </div>
-        <h3>{{name}}</h3>
+
+        <div class="card">
+            <div class="item item-divider">
+              {{name}}
+            </div>
+           
+            <div class="item item-icon-left">
+              <i class="icon ion-email"></i>
+              User's email
+            </div>
+            
+            <div class="item item-icon-left">
+              <i class="icon ion-chatbubbles"></i>
+              User's WeChat
+            </div>
+            
+        </div>
+
+       
 
         <div class="list card" ng-repeat="x in UserPost">
 
@@ -24,7 +42,7 @@
 
           <a class="item item-icon-left assertive" href="#">
             <i class="icon ion-ios-location"></i>
-            {{x.location}}
+            {{x.city}}, {{x.state}}
           </a>
 
         </div>
