--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,10 +1,20 @@
 <ion-view title="Search">
     <ion-content padding="'true'" class="has-header">
-        <form class="list">
+        <form class="list" ng-submit="doSearch()">
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
-                <input type="search" placeholder="">
+                <input type="search" placeholder="Search for a pet" ng-model='search.value'>
             </label>
         </form>
+        <div class="list">
+
+            <div class="item item-thumbnail-left" ng-repeat="x in status">
+              <img src= {{x.image}}>
+              <h2>{{x.PetName}}</h2>
+              <p>{{x.breed}}</p>
+              <p>{{x.gender}}, {{x.age}}</p>
+              <p>{{x.city}}, {{x.state}}</p>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
