working on camera

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -7,6 +7,7 @@
     <ion-content padding="'true'" class="has-header">
         <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: auto; background-color: rgb(255, 255, 255);">
             <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+        <img src="" id="myImage">
         </div>
 
         <div class="card">
@@ -16,12 +17,12 @@
            
             <div class="item item-icon-left">
               <i class="icon ion-email"></i>
-              User's email
+              {{email}}
             </div>
             
             <div class="item item-icon-left">
-              <i class="icon ion-chatbubbles"></i>
-              User's WeChat
+              <i class="icon ion-social-whatsapp-outline"></i>
+              {{whatsApp}}
             </div>
             
         </div>
