--- a/www/templates/login2.html
+++ b/www/templates/login2.html
@@ -1,7 +1,8 @@
 <ion-view title="Login">
     <ion-content padding="'true'" class="has-header">
         <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: auto; background-color: rgb(255, 255, 255);">
-            <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
+            <!--i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i-->
+         <img src="img/logo.png" width="100%">
         </div>
         <form class="list" ng-submit="getLogin()">
             <ion-list>
@@ -13,7 +14,6 @@
                 </label>
             </ion-list>
             <button type="submit" href="#/page7/home" class="button button-calm button-block ">Log in</button>
-            <button class="button button-outline button-calm button-block"> Forgot Password? </button>
             <a href="#/signup" class="button button-positive button-clear button-block ">Or create an account</a>
         </form>
     </ion-content>
