edit sign up form with whatsApp field and able to upload profile pix, able to show profile pix in profile

--- a/www/templates/newStatus.html
+++ b/www/templates/newStatus.html
@@ -1,7 +1,7 @@
 <ion-view title="New Status">
     <ion-content padding="'true'" class="has-header">
       
-            <img src="" id="myImage">
+            <img src="" id="myImage" style="vertical-align:middle">
             
             <div class="button-bar">
                 <a class="button button-outline button-royal ion-camera" ng-click="useCamera()"></a>
