--- a/www/templates/login2.html
+++ b/www/templates/login2.html
@@ -1,8 +1,10 @@
 <ion-view title="Login">
     <ion-content padding="'true'" class="has-header">
-        <div style="line-height: 250px; border: 1px solid rgb(238, 238, 238); border-radius: 3px; text-align: center; width: 100%; height: auto; background-color: rgb(255, 255, 255);">
-            <!--i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i-->
-         <img src="img/logo.png" width="100%">
+        <div style="line-height: auto; border: 1px solid rgb(238, 238, 238); 
+        border-radius: 3px; 
+        width="100%";
+        height: 250px; ">
+         <img src="img/logo.jpg" width="100%">
         </div>
         <form class="list" ng-submit="getLogin()">
             <ion-list>
