done with search

--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -8,7 +8,7 @@
         </form>
         <div class="list">
 
-            <div class="item item-thumbnail-left" ng-repeat="x in status">
+            <div class="item item-thumbnail-left" ng-repeat="x in searchResult">
               <img src= {{x.image}}>
               <h2>{{x.PetName}}</h2>
               <p>{{x.breed}}</p>
